--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
             </div>
             <div class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="/index1.html">Menu</a></li>
-                    <li><a href="/index2.html">About Us</a></li>
+                    <li><a href="https://kimheng99.github.io/Cafe-Homepage/">Home</a></li>
+                    <li><a href="https://kimheng99.github.io/Cafe-Menu/">Menu</a></li>
+                    <li><a href="https://kimheng99.github.io/Cafe-About/">About Us</a></li>
                     <li><a href="">Contact</a></li>
                     <li class="order">
-                        <a href="/index4.html">
+                        <a href="https://kimheng99.github.io/Cafe-Order/">
                             <div class="cicle"></div>
                             <i class="fa-solid fa-bag-shopping"></i>
                         </a>
